--- a/index.html
+++ b/index.html
@@ -33,13 +33,13 @@
             <br>
             <a href="index2.html" class="btn w-100 text-light p-3 mb-4" style="background-color: rgb(80, 16, 170); border-radius: 50px">
                 <div class="d-flex justify-content-center">
-                    <img src="img/google.jpeg" style="width:25px; height:25px; margin-right:25px">
+                    <img src="google.jpeg" style="width:25px; height:25px; margin-right:25px">
                     <h5>Login with Google</h5>
                 </div>
             </a>
             <a href="index2.html" class="btn w-100 text-light p-3" style="background-color: rgb(80, 16, 170); border-radius: 50px">
                 <div class="d-flex justify-content-center">
-                    <img src="img/facebook.jpeg" style="width:25px; height:25px; margin-right:25px">
+                    <img src="facebook.jpeg" style="width:25px; height:25px; margin-right:25px">
                     <h5>Login with Facebook</h5>
                 </div>
             </a>
